[package]
name = "crypto"
version = "0.1.0"
authors = ["iwilare <iwilare@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
dioxus-logger = "0.5.1"
serde = "1.0.210"
